[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["benny <b1623546466@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pydantic = "^2.5.2"
click = "^8.1.7"
pymongo = "^4.6.1"
deepdiff = "^6.7.1"
psycopg2 = "^2.9.9"
humanfriendly = "^10.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
